Update ProductosController.java